Fix image paths in index.html
Updated image source paths in the gallery.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
       </p>
 
       <div class="gallery">
-        <img src="gambar/kenangan1.jpeg" alt="Kenangan">
-        <img src="gambar/kenangan2.jpeg" alt="Kenangan">
+        <img src="kenangan1.jpeg">
+        <img src="kenangan2.jpeg">
       </div>
 
       <p>
@@ -50,3 +50,4 @@
   </main>
 </body>
 </html>
+
